Disable CCPR for VR

Disables Skia's CCPR support for the VR browser since it somehow causes
serious rendering issues. This workaround can be removed once the root
cause is found and fixed.

Requires that https://skia-review.googlesource.com/c/skia/+/137763 be
landed and rolled first.

Bug: 856404
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I4121319cae3a465798077cfeac058d84e9e9dd93
Reviewed-on: https://chromium-review.googlesource.com/1116066
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570775}
Former-commit-id: 34c02d5dab3871123295311575013dc22e6af1c3