chrome/browser/vr/ganesh_surface_provider.cc
@@ -8,6 +8,7 @@
 #include "third_party/skia/include/core/SkSurface.h"
 #include "third_party/skia/include/gpu/GrBackendSurface.h"
 #include "third_party/skia/include/gpu/GrContext.h"
+#include "third_party/skia/include/gpu/GrContextOptions.h"
 #include "ui/gfx/geometry/size.h"
 #include "ui/gl/gl_implementation.h"
 #include "ui/gl/gl_version_info.h"
@@ -26,7 +27,11 @@ GaneshSurfaceProvider::GaneshSurfaceProvider() {
   sk_sp<const GrGLInterface> gr_interface =
       gl::init::CreateGrGLInterface(gl_version_info);
   DCHECK(gr_interface.get());
-  gr_context_ = GrContext::MakeGL(std::move(gr_interface));
+  // TODO(https://crbug.com/856404): Remove these options whenever CCPR plays
+  // nice with the VR UI.
+  GrContextOptions options;
+  options.fDisableCoverageCountingPaths = true;
+  gr_context_ = GrContext::MakeGL(std::move(gr_interface), options);
   DCHECK(gr_context_.get());
   glGetIntegerv(GL_FRAMEBUFFER_BINDING, &main_fbo_);
 }
